Generalised further the progress bar function. Now handles progression via an arbitrary number of stops points.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
 
                         <div class="info test-icon">
-                            <div class="test-kind">
+                            <div class="test-kind dl">
                                 Download
                                 <i
                                     class="fa fa-arrow-circle-o-down"
@@ -76,7 +76,7 @@
                         </div>
 
                         <div class="info test-icon">
-                            <div class="test-kind">
+                            <div class="test-kind ul rotate">
                                 Upload
                                 <i
                                     class="fa fa-arrow-circle-o-down"
