--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="test-kind dl">
                                 Download
                                 <i
-                                    class="fa fa-arrow-circle-o-down"
+                                    class="fa fa-arrow-circle-o-down white"
                                     aria-hidden="true"
                                 ></i>
                             </div>
@@ -79,7 +79,7 @@
                             <div class="test-kind ul rotate">
                                 Upload
                                 <i
-                                    class="fa fa-arrow-circle-o-down"
+                                    class="fa fa-arrow-circle-o-down white"
                                     aria-hidden="true"
                                 ></i>
                             </div>
@@ -120,7 +120,7 @@
                         <h2>
                             Speed test complete!
                         </h2>
-                        Click the <span class="start-color">Next</span> button
+                        Click the <span class="start-color">&nbsp;Next &#8594&nbsp;</span> button
                         to finish the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
@@ -137,8 +137,10 @@
 
                         If you have a low data cap or would like to skip the
                         speed test, press the
-                        <span class="start-color">Next</span> button. Otherwise,
-                        press the <span class="start-color">Start</span> button.
+                        <span class="start-color">&nbsp;Next &#8594&nbsp;</span>
+                        button. Otherwise, press the
+                        <span class="start-color">&nbsp;Start&nbsp;</span>
+                        button.
                     </div>
                 </div>
             </div>
