--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="styles/extras.css" />
+        <link rel="stylesheet" href="styles/utils.css" />
 
         <title>speedtest.fi</title>
     </head>
@@ -36,9 +37,9 @@
         <div class="outer-content">
             <div class="main-content" id="main-content">
                 <div class="start-btn-container">
-                    <div class="start-btn" id="start-btn">
-                        Start
-                        <div class="pulse"></div>
+                    
+                    <div class="start-btn btn-prime" id="start-btn">
+                        <div class="ripple"></div>
                     </div>
                 </div>
 
@@ -120,7 +121,7 @@
                         <h2>
                             Speed test complete!
                         </h2>
-                        Click the <span class="start-color">&nbsp;Next &#8594&nbsp;</span> button
+                        Click the <span class="start-color">Next &#8594</span> button
                         to finish the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
@@ -137,9 +138,9 @@
 
                         If you have a low data cap or would like to skip the
                         speed test, press the
-                        <span class="start-color">&nbsp;Next &#8594&nbsp;</span>
+                        <span class="start-color">Next &#8594</span>
                         button. Otherwise, press the
-                        <span class="start-color">&nbsp;Start&nbsp;</span>
+                        <span class="start-color">Start</span>
                         button.
                     </div>
                 </div>
