Sequestered off IE stuff.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
             crossorigin="anonymous"
         ></script>
-
+        <script type="text/javascript" src="scripts/ie.js"></script>
         <script type="text/javascript" src="speedtest.js"></script>
         <script type="module" src="scripts/script.js"></script>
     </body>
