Quick fix for the button CSS.

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="outer-content">
             <main class="main-content" id="main-content">
                 <div class="start-btn-container">
-                    <button
+                    <div
                         class="start-btn btn-prime"
                         id="start-btn"
                         aria-label="start-button"
                     >
                         <div class="ripple"></div>
-                    </button>
+                    </div>
                 </div>
 
                 <div
