Fixed info and start pane styling.

--- a/index.html
+++ b/index.html
@@ -155,21 +155,26 @@
                     class="pane-container d-flex align-items-center box-shadow pane-hidden"
                     id="complete-modal"
                 >
-                    <h2>
-                        Speed test complete!
-                    </h2>
-                    <div class="text">
-                        Click the <span class="start-color">Next →</span> button
-                        to finish the survey.
+                    <div class="pane-info">
+                        <h2>
+                            Speed test complete!
+                        </h2>
+
+                        <div class="text">
+                            Click the
+                            <span class="start-color">Next →</span> button to
+                            finish the survey.
+                        </div>
+
+                        <i class="fa fa-check icon-lg" aria-hidden="true"></i>
                     </div>
-                    <i class="fa fa-check" aria-hidden="true"></i>
                 </div>
 
                 <div
                     class="pane-container d-flex align-items-center box-shadow"
                     id="start-modal"
                 >
-                    <div class="text">
+                    <div class="pane-info">
                         We will now test the speed of your current internet
                         connection. This test may use up to
                         <span class="ul-color">100 MB</span> of data.
