Slightly changed margins on download meter. Changed framerate of animation routine.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         >
             <main class="main-content mvh-100" id="main-content">
                 <div
-                    class="container-fluid d-flex justify-content-center start-btn-container"
+                    class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
                 >
                     <div
                         class="start-btn btn-prime"
