Added qualtrics overrides. Tweaked styles.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
 
                 <div
-                    class="pane-container test-container box-shadow pane-hidden"
+                    class="pane-container d-flex justify-content-center flex-column test-container box-shadow pane-hidden"
                     id="test-container"
                 >
                     <div class="square-box">
