--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
     </head>
 
     <body>
-        <div
-            class="d-flex justify-content-center align-items-center p-0 h-100 w-100"
-        >
-            <main class="main-content mvh-100" id="main-content">
+        <div class="d-flex justify-content-center align-items-center h-100 w-100">
+            <main class="main-content" id="main-content">
                 <div
                     class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
                 >
