Reverted test-container back to a grid layout.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </head>
 
     <body>
-        <div class="d-flex justify-content-center align-items-center h-100 w-100">
+        <div
+            class="d-flex justify-content-center align-items-center h-100 w-100"
+        >
             <main class="main-content" id="main-content">
                 <div
                     class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
@@ -125,7 +127,7 @@
                 </div>
 
                 <div
-                    class="pane-container d-flex justify-content-center flex-column test-container box-shadow pane-hidden"
+                    class="pane-container test-container box-shadow pane-hidden"
                     id="test-container"
                 >
                     <div class="square-box">
