Modified in-line button colors.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         If you have a low data cap or would like to skip the
                         speed test, press the
                         <span class="start-color">Next →</span>
-                        button. Otherwise, press the
+                        button in the lower right. Otherwise, press the
                         <span class="start-color">Start</span>
                         button.
                     </div>
