added iframe css.

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
                 <div
                     class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
                 >
-                    <div
+                    <button
                         class="start-btn btn-prime"
                         id="start-btn"
                         aria-label="start-button"
                     >
+                        <div class="text">Start</div>
                         <div class="ripple"></div>
-                    </div>
+                    </button>
                 </div>
 
                 <div class="container-fluid d-flex flex-column">
