changes to tmp iframe resizing.

--- a/tmp.html
+++ b/tmp.html
@@ -8,10 +8,13 @@
         <link rel="stylesheet" href="styles/tmp.css" />
     </head>
     <body>
+        
         <div class="iframe-container">
             <iframe
                 src="index.html"
             ></iframe>
         </div>
     </body>
+    <script type="module" src="scripts/tmp.js"></script>
+    
 </html>
