--- a/index.html
+++ b/index.html
@@ -34,165 +34,158 @@
     </head>
 
     <body>
-        <div
-            class="d-flex justify-content-center align-items-center h-100 w-100"
-        >
-            <main class="main-content" id="main-content">
-                <div
-                    class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
+        <main  id="main-content">
+            <div
+                class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
+            >
+                <button
+                    class="start-btn btn-prime"
+                    id="start-btn"
+                    aria-label="start-button"
                 >
-                    <button
-                        class="start-btn btn-prime"
-                        id="start-btn"
-                        aria-label="start-button"
+                    <div class="text">Start</div>
+                    <div class="ripple"></div>
+                </button>
+            </div>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div
+                        class="d-flex justify-content-space-evenly w-100 test-info-container box-shadow"
                     >
-                        <div class="text">Start</div>
-                        <div class="ripple"></div>
-                    </button>
+                        <div class="info">
+                            <div class="test-kind">
+                                Latency<i
+                                    class="fa fa-arrow-circle-o-down"
+                                    aria-hidden="true"
+                                    style="opacity: 0;"
+                                ></i>
+                            </div>
+
+                            <div class="unit-container in-progress">
+                                <div
+                                    id="ping-amount"
+                                    class="amount"
+                                    aria-label="latency"
+                                >
+                                    0
+                                </div>
+                                <div class="unit">ms</div>
+                            </div>
+                        </div>
+
+                        <div class="info test-icon">
+                            <div class="test-kind dl">
+                                Download
+                                <i
+                                    class="fa fa-arrow-circle-o-down white"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                            <div class="unit-container in-progress">
+                                <div
+                                    id="dl-amount"
+                                    class="amount"
+                                    aria-label="download-speed"
+                                >
+                                    0
+                                </div>
+                                <div class="unit">Mbps</div>
+                            </div>
+                        </div>
+
+                        <div class="info test-icon">
+                            <div class="test-kind ul rotate">
+                                Upload
+                                <i
+                                    class="fa fa-arrow-circle-o-down white"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                            <div class="unit-container in-progress">
+                                <div
+                                    id="ul-amount"
+                                    class="amount"
+                                    aria-label="upload-speed"
+                                >
+                                    0
+                                </div>
+                                <div class="unit">Mbps</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="container-fluid d-flex flex-column">
-                    <div class="row">
+                <div class="row">
+                    <div class="progress-bar-container" id="progress-bar"></div>
+                </div>
+            </div>
+
+            <div
+                class="pane-container test-container box-shadow"
+                id="test-container"
+            >
+                <div class="square-box">
+                    <canvas id="test-meter"></canvas>
+                </div>
+
+                <div class="info test-icon">
+                    <div class="unit-container">
                         <div
-                            class="d-flex justify-content-space-evenly w-100 test-info-container box-shadow"
+                            id="test-amount"
+                            class="amount"
+                            aria-label="active-test-speed"
                         >
-                            <div class="info">
-                                <div class="test-kind">
-                                    Latency<i
-                                        class="fa fa-arrow-circle-o-down"
-                                        aria-hidden="true"
-                                        style="opacity: 0;"
-                                    ></i>
-                                </div>
-
-                                <div class="unit-container in-progress">
-                                    <div
-                                        id="ping-amount"
-                                        class="amount"
-                                        aria-label="latency"
-                                    >
-                                        0
-                                    </div>
-                                    <div class="unit">ms</div>
-                                </div>
-                            </div>
-
-                            <div class="info test-icon">
-                                <div class="test-kind dl">
-                                    Download
-                                    <i
-                                        class="fa fa-arrow-circle-o-down white"
-                                        aria-hidden="true"
-                                    ></i>
-                                </div>
-                                <div class="unit-container in-progress">
-                                    <div
-                                        id="dl-amount"
-                                        class="amount"
-                                        aria-label="download-speed"
-                                    >
-                                        0
-                                    </div>
-                                    <div class="unit">Mbps</div>
-                                </div>
-                            </div>
-
-                            <div class="info test-icon">
-                                <div class="test-kind ul rotate">
-                                    Upload
-                                    <i
-                                        class="fa fa-arrow-circle-o-down white"
-                                        aria-hidden="true"
-                                    ></i>
-                                </div>
-                                <div class="unit-container in-progress">
-                                    <div
-                                        id="ul-amount"
-                                        class="amount"
-                                        aria-label="upload-speed"
-                                    >
-                                        0
-                                    </div>
-                                    <div class="unit">Mbps</div>
-                                </div>
-                            </div>
+                            0
                         </div>
+                        <div id="test-amount-unit" class="unit">Mbps</div>
                     </div>
-
-                    <div class="row">
-                        <div
-                            class="progress-bar-container"
-                            id="progress-bar"
-                        ></div>
+                    <div id="test-kind" class="test-kind">
+                        <div class="dot-container dot-typing"></div>
                     </div>
                 </div>
+            </div>
 
-                <div
-                    class="pane-container test-container box-shadow pane-hidden"
-                    id="test-container"
-                >
-                    <div class="square-box">
-                        <canvas id="test-meter"></canvas>
+            <div
+                class="pane-container d-flex align-items-center box-shadow pane-hidden"
+                id="complete-modal"
+            >
+                <div class="pane-info">
+                    <h2>
+                        Speed test complete!
+                    </h2>
+
+                    <div class="text">
+                        Click the
+                        <span class="start-color">Next →</span> button to finish
+                        the survey.
                     </div>
 
-                    <div class="info test-icon">
-                        <div class="unit-container">
-                            <div
-                                id="test-amount"
-                                class="amount"
-                                aria-label="active-test-speed"
-                            >
-                                0
-                            </div>
-                            <div id="test-amount-unit" class="unit">Mbps</div>
-                        </div>
-                        <div id="test-kind" class="test-kind">
-                            <div class="dot-container dot-typing"></div>
-                        </div>
-                    </div>
+                    <i class="fa fa-check icon-lg" aria-hidden="true"></i>
                 </div>
+            </div>
 
-                <div
-                    class="pane-container d-flex align-items-center box-shadow pane-hidden"
-                    id="complete-modal"
-                >
-                    <div class="pane-info">
-                        <h2>
-                            Speed test complete!
-                        </h2>
+            <div
+                class="pane-container d-flex align-items-center box-shadow pane-hidden"
+                id="start-modal"
+            >
+                <div class="pane-info">
+                    We will now test the speed of your current internet
+                    connection. This test may use up to
+                    <span class="ul-color">100 MB</span> of data.
 
-                        <div class="text">
-                            Click the
-                            <span class="start-color">Next →</span> button to
-                            finish the survey.
-                        </div>
+                    <br />
+                    <br />
 
-                        <i class="fa fa-check icon-lg" aria-hidden="true"></i>
-                    </div>
+                    If you have a low data cap or would like to skip the speed
+                    test, press the
+                    <span class="start-color">Next →</span>
+                    button in the lower right. Otherwise, press the
+                    <span class="start-color">Start</span>
+                    button.
                 </div>
-
-                <div
-                    class="pane-container d-flex align-items-center box-shadow"
-                    id="start-modal"
-                >
-                    <div class="pane-info">
-                        We will now test the speed of your current internet
-                        connection. This test may use up to
-                        <span class="ul-color">100 MB</span> of data.
-
-                        <br />
-                        <br />
-
-                        If you have a low data cap or would like to skip the
-                        speed test, press the
-                        <span class="start-color">Next →</span>
-                        button in the lower right. Otherwise, press the
-                        <span class="start-color">Start</span>
-                        button.
-                    </div>
-                </div>
-            </main>
-        </div>
+            </div>
+        </main>
 
         <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
