--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <body>
         <main  id="main-content">
             <div
-                class="container-fluid d-flex justify-content-center align-items-center start-btn-container"
+                class="container-fluid d-flex justify-content-center start-btn-container"
             >
                 <button
-                    class="start-btn btn-prime"
+                    class="row start-btn btn-prime"
                     id="start-btn"
                     aria-label="start-button"
                 >
@@ -48,10 +48,10 @@
                 </button>
             </div>
 
-            <div class="container-fluid">
+            <div class="container-fluid test-info-progress-container">
                 <div class="row">
                     <div
-                        class="d-flex justify-content-space-evenly w-100 test-info-container box-shadow"
+                        class="test-info-container box-shadow"
                     >
                         <div class="info">
                             <div class="test-kind">
@@ -146,7 +146,7 @@
                 </div>
             </div>
 
-            <div
+            <!-- <div
                 class="pane-container d-flex align-items-center box-shadow pane-hidden"
                 id="complete-modal"
             >
@@ -163,9 +163,9 @@
 
                     <i class="fa fa-check icon-lg" aria-hidden="true"></i>
                 </div>
-            </div>
+            </div> -->
 
-            <div
+            <!-- <div
                 class="pane-container d-flex align-items-center box-shadow pane-hidden"
                 id="start-modal"
             >
@@ -184,7 +184,7 @@
                     <span class="start-color">Start</span>
                     button.
                 </div>
-            </div>
+            </div> -->
         </main>
 
         <script
