added fluid text scaling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="info test-icon">
-                    <div class="unit-container">
+                    <div class="unit-container" id="test-amount-container">
                         <div
                             id="test-amount"
                             class="amount"
@@ -54,7 +54,7 @@
                         </div>
                         <div id="test-amount-unit" class="unit">Mbps</div>
                     </div>
-                    
+
                     <div id="test-kind" class="test-kind">
                         <div class="dot-container dot-typing"></div>
                     </div>
@@ -140,6 +140,6 @@
         ></script>
         <script type="text/javascript" src="scripts/ie.js"></script>
         <script type="text/javascript" src="speedtest.js"></script>
-        <script type="module" src="scripts/script.js"></script>
+        <script defer type="module" src="scripts/script.js"></script>
     </body>
 </html>
