--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body>
         <main id="main-content">
             <div
-                class="pane-container test-container box-shadow"
+                class="pane-container pane-hidden test-container box-shadow"
                 id="test-container"
             >
                 <div class="square-box">
@@ -58,6 +58,38 @@
                     <div id="test-kind" class="test-kind">
                         <div class="dot-container dot-typing"></div>
                     </div>
+                </div>
+            </div>
+
+            <div
+                class="pane-container box-shadow pane-hidden"
+                id="complete-modal"
+            >
+                <div class="pane-info">
+                    <h2>
+                        Speed test complete!
+                    </h2>
+
+                    <div class="text">
+                        Click the Next → button to finish the survey.
+                    </div>
+
+                    <i class="fa fa-check icon-lg" aria-hidden="true"></i>
+                </div>
+            </div>
+
+            <div class="pane-container box-shadow" id="start-modal">
+                <div class="pane-info">
+                    We will now test the speed of your current internet
+                    connection. This test may use up to
+                    <span class="ul-color">100 MB</span> of data.
+
+                    <br />
+                    <br />
+
+                    If you have a low data cap or would like to skip the speed
+                    test, press the Next → button in the lower right. Otherwise,
+                    press the Start button.
                 </div>
             </div>
 
