--- a/index.html
+++ b/index.html
@@ -61,18 +61,15 @@
                 </div>
             </div>
 
-            <div
-                class="pane-container box-shadow pane-hidden"
-                id="complete-modal"
-            >
+            <div class="pane-container pane-hidden box-shadow" id="complete-modal">
                 <div class="pane-info">
                     <h2>
                         Speed test complete!
                     </h2>
 
-                    <div class="text">
-                        Click the Next → button to finish the survey.
-                    </div>
+                    <p>
+                        Click the Next → button continue.
+                    </p>
 
                     <i class="fa fa-check icon-lg" aria-hidden="true"></i>
                 </div>
@@ -80,16 +77,19 @@
 
             <div class="pane-container box-shadow" id="start-modal">
                 <div class="pane-info">
-                    We will now test the speed of your current internet
-                    connection. This test may use up to
-                    <span class="ul-color">100 MB</span> of data.
+                    <p>
+                        We will now test the speed of your current internet
+                        connection. This test may use up to
+                        <span class="ul-color">100 MB</span> of data.
+                    </p>
 
                     <br />
-                    <br />
 
-                    If you have a low data cap or would like to skip the speed
-                    test, press the Next → button in the lower right. Otherwise,
-                    press the Start button.
+                    <p>
+                        If you have a low data cap or would like to skip the
+                        speed test, press the Next → button in the lower right.
+                        Otherwise, press the Start button.
+                    </p>
                 </div>
             </div>
 
