--- a/start.html
+++ b/start.html
@@ -21,9 +21,8 @@
     id="start-modal"
 >
     <div class="pane-info">
-        We will now test the speed of your current internet connection. This
-        test may use up to
-        <span class="ul-color">100 MB</span> of data.
+        We will now test the speed of your current internet connection.This
+        test may use up to<span class="ul-color">100 MB</span> of data.
 
         <br />
         <br />
