changed styling, added some color

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 id="complete-modal"
             >
                 <div class="pane-info">
-                    <h2>
-                        Speed test complete!
-                    </h2>
+                    <h1>
+                        Speed test complete.
+                    </h1>
 
                     <p>
                         Click the Next → button continue.
@@ -65,15 +65,15 @@
 
             <div class="pane-container box-shadow" id="start-modal">
                 <div class="pane-info">
-                    <p>
+                    <h2>
                         The speed of your internet connection will now be
                         tested.
-                    </p>
+                    </h2>
 
                     <br />
 
                     <p>
-                        Up to 25 MB of data on cellular or satellite connections
+                        Up to <span class="dl-color">25 MB</span> of data on cellular or satellite connections
                         may be consumed. If you would like to skip the speed
                         test, press the Next → button in the lower right.
                         Otherwise, press the Start button.
@@ -94,7 +94,7 @@
                                 class="amount"
                                 aria-label="latency"
                             >
-                                00.0
+                                0
                             </div>
                             <div class="unit">ms</div>
                         </div>
@@ -110,7 +110,7 @@
                                 class="amount"
                                 aria-label="download-speed"
                             >
-                                00.0
+                                0
                             </div>
                             <div class="unit">Mbps</div>
                         </div>
@@ -126,7 +126,7 @@
                                 class="amount"
                                 aria-label="upload-speed"
                             >
-                                00.0
+                                0
                             </div>
                             <div class="unit">Mbps</div>
                         </div>
