--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         />
         <meta charset="UTF-8" />
 
+        <script
+            src="https://kit.fontawesome.com/f3238cd59c.js"
+            crossorigin="anonymous"
+        ></script>
+
         <link
             rel="icon"
             type="image/x-ico"
@@ -73,10 +78,11 @@
                     <br />
 
                     <p>
-                        Up to <span class="dl-color">25 MB</span> of data on cellular or satellite connections
-                        may be consumed. If you would like to skip the speed
-                        test, press the Next → button in the lower right.
-                        Otherwise, press the Start button.
+                        Up to <span class="dl-color">25 MB</span> of data on
+                        cellular or satellite connections may be consumed. If
+                        you would like to skip the speed test, press the Next →
+                        button in the lower right. Otherwise, press the Start
+                        button.
                     </p>
                 </div>
             </div>
@@ -84,7 +90,7 @@
             <div class="test-info-progress-container">
                 <div class="test-info-container box-shadow">
                     <div class="info">
-                        <div class="test-kind">
+                        <div class="test-kind ping">
                             Latency
                         </div>
 
@@ -103,6 +109,7 @@
                     <div class="info test-icon">
                         <div class="test-kind dl">
                             Download
+                             <i class="fas fa-arrow-circle-up"></i>
                         </div>
                         <div class="unit-container in-progress">
                             <div
@@ -117,8 +124,10 @@
                     </div>
 
                     <div class="info test-icon">
-                        <div class="test-kind ul rotate">
+                        
+                        <div class="test-kind ul">
                             Upload
+                            <i class="fas fa-arrow-circle-up"></i>
                         </div>
                         <div class="unit-container in-progress">
                             <div
