made the info bar hidden on load, and visible on start.

--- a/index.html
+++ b/index.html
@@ -59,38 +59,47 @@
                         Speed test complete.
                     </h1>
 
-                    <p>
-                        Click the Next → button continue.
-                    </p>
+                    <hr />
 
-                    <i class="fas fa-check-circle icon-lg jelly"></i>
+                    <p>
+                        Thank you!
+
+                        <br />
+                        <br />
+
+                        Click the Next → button to continue, or wait to
+                        automatically progress.
+                    </p>
                 </div>
             </div>
 
             <div class="pane-container box-shadow" id="start-modal">
                 <div class="pane-info">
-                    <h2>
-                        The speed of your internet connection will now be
-                        tested.
-                    </h2>
+                    <h1>
+                        Let's test your internet speed.
+                    </h1>
 
                     <hr />
 
                     <p>
                         Up to <span class="dl-color">25 MB</span> of data on
-                        <strong>cellular</strong> or <strong>satellite</strong> connections may be consumed.
+                        <strong>cellular</strong> or
+                        <strong>satellite</strong> connections may be consumed.
 
                         <br />
                         <br />
 
-                        If you would like to skip the speed test, press the Next
+                        If you'd like to skip the speed test, press the Next
                         → button in the lower right. Otherwise, press the Start
-                        button.
+                        button to begin.
                     </p>
                 </div>
             </div>
 
-            <div class="test-info-progress-container">
+            <div
+                class="test-info-progress-container hidden"
+                id="info-progress-container"
+            >
                 <div class="test-info-container box-shadow">
                     <div class="info">
                         <div class="test-kind ping">
